[Feat] 추가모집 관련 확장 사항 반영 (#465)
* feat: recruitment에 root, parent recruitmentId 추가

* feat: 추가모집 생성을 위한 도메인 메서드 정의

* feat: 추가모집 최초 생성 API 구현

* feat: 최초 모집 생성 시에 rootRecruitmentId 세팅 로직 추가

* feat: 모집 update 서비스 로직에 추가모집 임시저장 방어 로직 구현

* feat: 모집 publish 서비스 로직에 추가모집 검증 로직 추가

* feat: 추가 모집 기반 목록 조회 API 구현

* refactor: RecruitmentsService -> RecruitmentService로 이름 변경

* refactor: 조회 로직 RecruitmentService -> RecruitmentQueryService로 이동

* feat: rootRecruitment를 위한 도메인 메서드 수정/추가

* refactor: 면접 질문지 관리 로직 root recruitment 기반으로 통합

* refactor: 면접 스케줄링 요약 로직 root recruitment 기반으로 통합

* refactor: 면접 슬롯 조회 로직 availableCount root recruitment 기반으로 통합

* refactor: 특정 슬롯에 배정 가능한 지원자/이미 배정된 지원자 조회를 root recruitment 기반으로 통합

* refactor: 특정 슬롯에 배정된 면접자 목록 조회 rootRecruitment 기반 통합

* refactor: 면접 슬롯 배정/해제 rootRecruitment 기반 통합

* refactor: validate assignment 검증 로직을 root 기반으로 수정

* refactor: 실시간 면접 평가 API를 rootRecruitment 기반으로 수정

* refactor: 최종 선발 관련 API rootRecruitment 기반 통합

* refactor: 서류평가용 지원서 상세 조회 API 검증 조건을 rootRecruitment 기준으로 완화

* refactor: 서류 평가 대상 목록 조회 API에 rootRecruitment 응답 포함

* refactor: active 모집 조회를 추가모집 기반으로 확장
- '지원 기간인 모집' 기준의 id 반환
- '지원 기간인 모집'이 없다면, 가장 최근 모집 id 반환

* refactor: 추가모집 확장에 따른 지원자 대시보드 로직 개선
- 글로벌 activeId보다 지원자의 개별 지원 이력을 최우선 취급
- 현재 기수/학교 내에 SUBMITTED/DRAFT 기록이 있다면 해당 공고를 기준으로 상태 노출
- 기록이 없는 경우만 activeId 기준으로 '지원 전' 상태 가이드

* refactor: 운영진 대시보드 통계 rootRecruitment 기준 합산 로직 적용
- 지원, 평가 현황 통계: rootRecruitmentId 기반으로 전체 데이터 합산
- 일정, 단계: 매개변수로 받은 recruitmentId 기반으로 타임라인 반영